feat: referral API v2
